Got the examples

--- a/appinfo.json
+++ b/appinfo.json
@@ -3,11 +3,17 @@
     "capabilities": [
         ""
     ],
-    "companyName": "jw+pebble@s3a.co.uk",
+    "companyName": "s3a",
     "longName": "Approx",
     "projectType": "native",
     "resources": {
-        "media": []
+        "media": [
+            {
+                "file": "fonts/perfect-dos-vga.ttf",
+                "name": "FONT_PERFECT_DOS_48",
+                "type": "font"
+            }
+        ]
     },
     "sdkVersion": "3",
     "shortName": "Approx",
